more block edits

--- a/prove/introduction-block.html
+++ b/prove/introduction-block.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Team Challenge Introduction</h1>
+        <h1>Final Project: Team Challenge Introduction</h1>
         <hr />
 
         <h2>Description</h2>
@@ -52,31 +52,17 @@
             called Client Side Rendering (CSR)
           </li>
         </ul>
+        <p>This course uses the second approach (client side).</p>
+        <h2>The Team Challenge</h2>
         <p>
-          This course uses the second approach (client side), and as such is a
-          very nice match with CSE 341.
-        </p>
-        <h2>The Challenge</h2>
-        <p>
-          For the final challenge of this course your team will be matched with
-          another team made of students currently taking CSE 341. The two teams
-          need to work together to design and build a full backend and frontend
-          for a web application. For this week you will have the following
-          tasks:
+          For the final challenge of this course your team will need to work
+          together to design and build a frontend web application of your
+          choice. For this week you will have the following tasks:
         </p>
         <ol>
           <li>
-            Get to know the other team you will be working with. The instructors
-            will make the cross course team assignments and let you know who you
-            will be working with. You should establish how you will stay in
-            communication with each other. (There will be a cross course Team
-            set up with a channel for your team if you want to use it.)
-          </li>
-          <li>
             Brainstorm a list of application ideas that sound interesting
-            (5-10). These ideas should require a backend and frontend. There
-            should be a need for a database and user management of some sort
-            (which means authentication).
+            (5-10).
           </li>
         </ol>
         <p>
@@ -87,7 +73,7 @@
         </p>
         <p>
           You are not required to select one idea at this point (though that
-          will need to be done by Week 6), but if there is one that really
+          will need to be done by Week 4), but if there is one that really
           stands not and the team is excited about go ahead and indicate that it
           will likely be your choice. Submit the list of ideas in this activity.
         </p>
