--- a/prove/proposal-block.html
+++ b/prove/proposal-block.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Team Challenge Proposal</h1>
+        <h1>Final Project: Team Challenge Proposal</h1>
         <hr />
 
         <h2>Description</h2>
@@ -30,13 +30,20 @@
         <p>
           Your proposal can take many forms, but should show that you have
           thought through your idea enough to understand what will be required
-          and that the complexity matches the time available. It should also
-          show how it will meet the following project requirements:
+          and that the complexity matches the time available. As this is the
+          primary work you will do over weeks 5-7 you should plan on spending at
+          least 30 hours on these challenges. Work with the instructor to manage
+          the scope for your ideas.
+        </p>
+        <p>
+          Your proposal should also show how it will meet the following project
+          requirements:
         </p>
         <ul>
-          <li>Includes authentication and user management</li>
-          <li>Performs GET/POST/PUT/DELETE against the backend API</li>
-          <li>Can also use other 3rd party APIs if desired.</li>
+          <li>
+            Should use an external data source. This can a 3rd party API, or it
+            can be fetching data from a local JSON file.
+          </li>
           <li>All exposed features should work 100%</li>
           <li>
             Should be a combination of static and dynamically generated Markup.
@@ -64,6 +71,15 @@
             wireframes first!)
           </li>
           <li>
+            Data sources (External API, localStorage, local JSON file, etc.)
+          </li>
+          <li>Initial Module list</li>
+          <li>Colors/Typography/specific Element styling</li>
+          <li>
+            Schedule to provide yourself mile markers along the way to help you
+            stay on target.
+          </li>
+          <li>
             Link to a Trello board with all the tasks you can think of at this
             point defined as cards. Again be as detailed as possible here.
           </li>
@@ -72,8 +88,8 @@
           For the Trello board you can choose to have it be just for the
           frontend related tasks, or include the backend tasks as well. The
           Trello board is also a living document. It won't be done when you turn
-          it in...and will certainly change. Still, being as thorough as you can
-          here will make sure that you have thought this thing through :)
+          it in...and it will certainly change. Still, being as thorough as you
+          can here will make sure that you have thought this thing through :)
         </p>
         <p>Submit your proposal.</p>
         <!-- end #article -->
