--- a/prove/proposal-block.html
+++ b/prove/proposal-block.html
@@ -41,8 +41,8 @@
         </p>
         <ul>
           <li>
-            Should use an external data source. This can a 3rd party API, or it
-            can be fetching data from a local JSON file.
+            Should use an external data source. This can be a 3rd party API, or
+            it can be fetching data from a local JSON file.
           </li>
           <li>All exposed features should work 100%</li>
           <li>
@@ -85,9 +85,7 @@
           </li>
         </ol>
         <p>
-          For the Trello board you can choose to have it be just for the
-          frontend related tasks, or include the backend tasks as well. The
-          Trello board is also a living document. It won't be done when you turn
+          The Trello board is a living document. It won't be done when you turn
           it in...and it will certainly change. Still, being as thorough as you
           can here will make sure that you have thought this thing through :)
         </p>
