more block changes

--- a/ponder/team01.html
+++ b/ponder/team01.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Team Activity</h1>
+        <h1>Ponder: Team Activity 1</h1>
         <hr />
         <h2>Overview</h2>
         <p>
@@ -451,9 +451,7 @@
                 <p>
                   When you are done with your work and you are confident
                   everything is working you should submit a pull request (see
-                  below). Each week your team will be responsible to setup a
-                  meeting with the instructor (project owner) where the pull
-                  requests will be reviewed and merged back into the project.
+                  below).
                 </p>
               </div>
               <!-- END STEP -->
