--- a/ponder/team04-block.html
+++ b/ponder/team04-block.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Individual 4 Activity</h1>
+        <h1>Ponder: Individual Activity 4</h1>
         <hr />
         <h2>Overview</h2>
         <p>
@@ -44,8 +44,9 @@
               <!-- BEGIN STEP -->
               <p>
                 Visit the team's copy of the Trello board for the project. Add
-                yourself to the "Individual4: Dynamic header and footer"
-                task...then move it to 'Doing'. Read the details of the card.
+                yourself to the "Team4: Dynamic header and footer" task, then if
+                no one has done it yet, move it to 'Doing'. Read the details of
+                the card.
               </p>
               <p>
                 Make sure to <kbd>pull</kbd> any changes from GitHub before
