--- a/ponder/team05.html
+++ b/ponder/team05.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Team 5 Activity</h1>
+        <h1>Ponder: Team Activity 5</h1>
         <hr />
         <h2>Overview</h2>
         <p>
