--- a/ponder/team06-block.html
+++ b/ponder/team06-block.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Individual 6 Activity</h1>
+        <h1>Ponder: Individual Activity 6</h1>
         <hr />
         <h2>Overview</h2>
         <p>The next step for our site is to build out the checkout process.</p>
@@ -34,8 +34,8 @@
               <!-- BEGIN STEP -->
               <p>
                 Visit the team's copy of the Trello board for the project. Add
-                yourself to the "Individual6: Checkout" task...then move it to
-                'Doing'. Read the details of the card.
+                yourself to the "Team6: Checkout" task, then if no one else has
+                done it yet, move it to 'Doing'. Read the details of the card.
               </p>
               <p>
                 Make sure to <kbd>pull</kbd> any changes from GitHub before
