--- a/ponder/team08-block.html
+++ b/ponder/team08-block.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Individual 8 Activity</h1>
+        <h1>Ponder: Individual Activity 8</h1>
         <hr />
         <h2>Overview</h2>
         <p>
@@ -39,8 +39,9 @@
               <!-- BEGIN STEP -->
               <p>
                 Visit the team's copy of the Trello board for the project. Add
-                yourself to the "Individual8: Authentication" task...then move
-                it to 'Doing'. Read the details of the card.
+                yourself to the "Team8: Authentication" task,then if no one else
+                has done it yet, move it to 'Doing'. Read the details of the
+                card.
               </p>
               <p>
                 Make sure to <kbd>pull</kbd> any changes from GitHub before
