--- a/resources/software-setup-block.html
+++ b/resources/software-setup-block.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Prepare: Course Setup</h1>
+        <h1>Prepare: Software Setup</h1>
         <hr />
 
         <div class="requirements">
@@ -36,18 +36,18 @@
                 editor. Download and install it now if you do not have it.
               </p>
               <p>
-                I would also recommend reviewing
+                I would also recommend reviewing the
                 <a href="https://code.visualstudio.com/docs" target="_blank"
-                  >the documentation</a
+                  >Getting Started</a
                 >
-                if you have not.
+                page if you have not.
               </p>
 
               <!-- END STEP -->
             </li>
             <li>
               <!-- BEGIN STEP -->
-              <h3>Sitepoint</h3>
+              <h3>SitePoint</h3>
               <p>
                 We will be using materials from SitePoint.com
                 (http://sitepoint.com). You will need access to their premier
@@ -73,14 +73,13 @@
               <p>
                 Have each member of the team install the current LTS (Long Term
                 Support) version of node. Follow the instructions for your
-                operating system found in
+                operating system found in this
                 <a
                   href="https://byui-cit.github.io/advcss/lesson01/l01-software.html"
                   target="_blank"
                   rel="noreferrer"
-                  >this software setup</a
-                >
-                activity.
+                  >software setup page</a
+                >.
               </p>
 
               <p class="callout">
@@ -149,19 +148,20 @@
               <!-- BEGIN STEP -->
               <h3>Form a Team</h3>
               <p>
-                Much of the work for the course will be done in a team. Form a
-                team with 2-3 of your classmates (total team size should be
-                3-4). If you have trouble finding a team talk to the instructor.
-                Once your team is formed, send an email to the instructor with
-                the names of the members in your team.
+                Much of the work for the course will be done in a team. If you
+                haven't already, join a team with 1-2 of your classmates by
+                following the instructions in W01 Icebreaker and Team
+                Enrollment. If you have trouble finding a team, reach out to the
+                instructor. Once your team is formed, send an email to the
+                instructor with the names of the members in your team.
               </p>
               <p>
                 Remember that everyone should be in Microsoft Teams now as
                 well...you could post a message there: 'Looking for team.'
               </p>
               <p>
-                If you would like a private channel for your team in Teams, let
-                the instructor know in your email.
+                If you would like a private channel for your team in Microsoft
+                Teams, let the instructor know in your email.
               </p>
               <!-- END STEP -->
             </li>
