--- a/ponder/team03-block.html
+++ b/ponder/team03-block.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Individual 3 Activity</h1>
+        <h1>Ponder: Individual Activity 3</h1>
         <hr />
         <h2>Overview</h2>
         <p>
@@ -46,8 +46,9 @@
               <!-- BEGIN STEP -->
               <p>
                 Visit the team's copy of the Trello board for the project. Add
-                yourself to the "Individual3: Dynamic product list" task...then
-                move it to 'Doing'. Read the details of the card.
+                yourself to the "Team3: Dynamic product list" task, then if no
+                one else has done it yet, move it to 'Doing'. Read the details
+                of the card.
               </p>
               <p>
                 Make sure to <kbd>pull</kbd> any changes from GitHub before
