--- a/ponder/team07.html
+++ b/ponder/team07.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Team 7 Activity</h1>
+        <h1>Ponder: Team Activity 7</h1>
         <hr />
         <h2>Overview</h2>
         <p>
