--- a/resources/workflow-info-only.html
+++ b/resources/workflow-info-only.html
@@ -17,76 +17,72 @@
         </div>
       </header>
       <main>
-        <h1>Managing the modern Front-end workflow</h1>
+        <h1>Managing the Modern Frontend Workflow</h1>
         <hr />
 
         <p>
           Development workflow has become quite complicated for Web development.
-          Lets take a medium sized project for example. It could have dozens of
-          javascript files, several css files, 3rd party libraries, and who
-          knows how many icons, fonts, images, etc are involved. It might be
+          Let's take a medium-sized project for example. It could have dozens of
+          JavaScript files, several CSS files, 3rd party libraries, and who
+          knows how many icons, fonts, images, etc. involved. It might be
           using a CSS preprocessor like SASS or it could be transpiling the
-          Javascript to make sure that new features will work in older browsers.
+          JavaScript to make sure that new features will work in older browsers.
         </p>
         <div class="callout">
           <p>
-            A potential list of tasks that could need to happen everytime
-            something changes is this:
+            Here is a potential list of tasks that could need to happen every time
+            something changes:
           </p>
           <ol>
-            <li>Lint CSS and Javascript to find any coding issues.</li>
+            <li>Lint CSS and JavaScript to find any coding issues.</li>
             <li>
               Run unit tests to make sure nothing got broken with your last
               changes
             </li>
-            <li>compile all SCSS/LESS to CSS</li>
-            <li>concatinate all CSS into one file for faster loading,</li>
-            <li>Minify the CSS to reduce file size.</li>
-            <li>
-              Transpile Javascript with Babel for wider support for older
-              browsers
-            </li>
-            <li>Concatinate all JS files into one file for faster loading</li>
-            <li>Minify and Uglify Javascript to reduce size</li>
+            <li>Compile all SCSS/LESS to CSS</li>
+            <li>Concatenate all CSS into one file for faster loading</li>
+            <li>Minify the CSS to reduce file size</li>
+            <li>Transpile JavaScript with Babel for wider support for older
+              browsers</li>
+            <li>Concatenate all JS files into one file for faster loading</li>
+            <li>Minify and Uglify JavaScript to reduce size</li>
             <li>Do the same for any 3rd party CSS or JS</li>
-            <li>
-              Move all the production assets into a distribution directory to
-              separate them from the development stuff
-            </li>
+            <li>Move all the production assets into a distribution directory to
+              separate them from the development stuff</li>
           </ol>
           <p>Whew! That's a big list...and they have to happen A LOT!</p>
         </div>
         <p>
           It's no wonder that developers have produced tools to help manage all
           of this. This activity will introduce a simple implementation of some
-          of these tools. The tools fall into three catagories:
+          of these tools. The tools fall into three categories:
         </p>
         <ol>
           <li>
-            Package managers: These keep track of all of the external
-            dependencies for our app. Both development tools and libraries we
-            might be using. It knows not only which packages to download...but
+            <strong>Package managers:</strong> These keep track of all of the external
+            dependencies for our app. This includes development tools and libraries we
+            might be using. It not only knows which packages to download, but it
             tracks versions as well. We are using <code>npm</code> for our
             package manager.
           </li>
           <li>
-            Bundlers: bundlers handle the compiling, transpiling, concatinating,
+            <strong>Bundlers:</strong> Bundlers handle the compiling, transpiling, concatenating,
             minifying, and moving around of assets in our project. We are using
             <code>Snowpack</code> as our bundler. Other common bundlers are
             Parcel and Webpack.
           </li>
           <li>
-            Task managers: these keep track of what needs to be done and when.
+            <strong>Task managers:</strong> These keep track of what needs to be done and when.
             There will generally be scripts defined in the task manager for each
             phase of development. Our project is fairly simple so we are just
             using <code>npm</code> again for task manager. Other common managers
-            are Grunt or Gulp
+            are Grunt or Gulp.
           </li>
         </ol>
         <p>
-          We will be using a NPM/Node based workflow for this course this
+          We will be using a NPM/Node-based workflow for this course this
           semester. It is important that you understand how these tools work
-          together. The Week1 team activity will walk your group through setting
+          together. The Team Activity 1 will walk your group through setting
           this workflow up.
         </p>
       </main>
