more block changes

--- a/ponder/team06.html
+++ b/ponder/team06.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Team 6 Activity</h1>
+        <h1>Ponder: Team Activity 6</h1>
         <hr />
         <h2>Overview</h2>
         <p>The next step for our site is to build out the checkout process.</p>
