--- a/prepare/week04.html
+++ b/prepare/week04.html
@@ -22,7 +22,7 @@
 
         <p>
           Don't let this longer list worry you too much. Most of the articles
-          are fairly quick to read! Remember though that if you are having
+          are fairly quick to read! Remember: if you are having
           trouble understanding a concept the way that these resources present
           it...go find another source!
         </p>
@@ -30,40 +30,46 @@
         <h2>Reading</h2>
         <ol>
           <li>
-            Read all of
+            Read 
             <a
               href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/10"
               target="_blank"
               rel="noreferrer"
-              >Ch10: Testing/Debugging</a
-            >.
+              >Ch10: Testing and Debugging</a
+            >
           </li>
           <li>
-            Read all of
+            Read 
             <a
               href="https://blog.pshrmn.com/how-single-page-applications-work/"
               target="_blank"
               rel="noreferrer"
-              >How Single Page Applications work</a
-            >.
+              >How Single-Page Applications Work</a
+            >
           </li>
           <li>
-            Read all of
+            Read 
             <a
               href="https://gomakethings.com/the-problem-with-single-page-apps/"
               target="_blank"
               rel="noreferrer"
-              >The problem with single page apps</a
-            >.
+              >The Problem with Single Page Apps</a
+            >
           </li>
           <li>
-            Read all of
+            Read 
             <a
               href="https://dev.to/ahferroin7/the-html5-template-element-26b6"
               target="_blank"
               rel="noreferrer"
-              >HTML5 Template element</a
-            >.
+              >HTML5 Template Element</a
+            >
+          </li>
+		</ol>
+     <h2>Submission</h2>
+     <ol>
+          <li>
+            Submit your notes from the readings, including any questions you have about the material.
           </li>
         </ol>
       </main>
