--- a/prepare/week10.html
+++ b/prepare/week10.html
@@ -31,7 +31,7 @@
               rel="noreferrer"
               >An Introduction to Functions, Execution Context and the Call
               Stack </a
-            >. (22min)
+            > (22min)
           </li>
           <li>
             <!-- Move to week 3? -->
@@ -41,7 +41,13 @@
               target="_blank"
               rel="noreferrer"
               >How to Understand Callbacks & Higher Order Functions</a
-            >. (40min)
+            > (40min)
+          </li>
+        </ol>
+		<h2>Submission</h2>
+        <ol>
+          <li>
+            Submit your notes from the readings, including any questions you have about the material.
           </li>
         </ol>
       </main>
