--- a/resources/course-setup.html
+++ b/resources/course-setup.html
@@ -73,14 +73,13 @@
               <p>
                 Have each member of the team install the current LTS (Long Term
                 Support) version of node. Follow the instructions for your
-                operating system found in
+                operating system found in this
                 <a
                   href="https://byui-cit.github.io/advcss/lesson01/l01-software.html"
                   target="_blank"
                   rel="noreferrer"
-                  >this software setup</a
-                >
-                activity.
+                  >software setup page</a
+                >.
               </p>
 
               <p class="callout">
@@ -160,8 +159,8 @@
                 well...you could post a message there: 'Looking for team.'
               </p>
               <p>
-                If you would like a private channel for your team in Teams, let
-                the instructor know in your email.
+                If you would like a private channel for your team in Microsoft
+                Teams, let the instructor know in your email.
               </p>
               <!-- END STEP -->
             </li>
@@ -173,11 +172,11 @@
                 Each person should also create a free account at
                 <a href="https://trello.com" target="_blank">Trello</a>. We will
                 be using a Trello board to manage the team project. One person
-                in the team should visit
+                in the team should visit this
                 <a
                   href="https://trello.com/b/LO93bmJy/sleepoutside"
                   target="_blank"
-                  >this Trello board</a
+                  >Trello board</a
                 >, and
                 <a
                   href="https://help.trello.com/article/802-copying-cards-lists-or-boards"
