--- a/resources/syllabus-outside-block.html
+++ b/resources/syllabus-outside-block.html
@@ -24,6 +24,11 @@
           creating web applications.
         </p>
         <h2>Prerequisites</h2>
+        <p>Take ONE of the following:</p>
+        <ul>
+          <li>WDD 230 - Web Frontend Development I </li>
+          <li>CS 213 - Web Engineering I </li>
+        </ul>
         <p>
           <strong>WDD 230 -</strong> It is expected that you have learned and
           mastered the information made available to you in WDD 230 and its
@@ -144,7 +149,7 @@
               rel="noreferrer"
               >HTML5 &amp; CSS3 for the Real World: 2nd Edition (HCRW)</a
             >
-            (available as part of your Sitepoint premium subscription)
+            (available as part of your SitePoint premium subscription)
           </li>
 
           <!-- <li>Required: <a href="http://eloquentjavascript.net/index.html" target="_blank" rel="noreferrer">Eloquent JavaScript
@@ -158,7 +163,7 @@
               rel="noreferrer"
               >JavaScript: Novice to Ninja</a
             >
-            (available as part of your Sitepoint premium subscription)
+            (available as part of your SitePoint premium subscription)
           </li>
 
           <li>Google Chrome Web Browser</li>
@@ -192,7 +197,7 @@
         <p>
           This class has an unusual course design. It is designed introduce you
           to the tools, workflows, and problems common in modern Frontend
-          Development. We will spend the first 9 weeks of the course in teams
+          Development. We will spend the first 4.5 weeks of the course in teams
           working on a project modeled off of real world projects. The goal is
           to create an environment where the instructor is your mentor rather
           than a lecturer, and your team is a source of strength instead of
@@ -202,27 +207,23 @@
           same problems through creating Single Page Web applications.
         </p>
         <p>
-          For weeks 10-14 of the course you will further apply what you have
+          For weeks 5-7 of the course you will further apply what you have
           learned by designing and completing a project of your choosing. This
           project will be with your team.
         </p>
         <p>
-          During the first nine weeks your time will be spent on a weekly
-          reading assignment, a weekly Team activity, and additional tasks
-          (found in a Trello board of which each team will make a copy) that add
-          more functionality to our site. Each person in the team should have a
-          goal of completing at least one card (task) per week.
+          During the first 4.5 weeks your time will be spent on weekly reading
+          assignments, weekly Team and Individual Activities, and additional
+          tasks (found in a Trello board of which each team will make a copy)
+          that add more functionality to our site. Each person in the team
+          should have a goal of completing at least two Trello cards (tasks) per
+          week.
         </p>
         <ol>
-          <li>Reading assignment: 1-2hrs</li>
-          <li>
-            Team activity: ~2hrs (If face-to-face 1hr of this will be classtime)
-          </li>
-          <li>Trello Cards: ~3hrs</li>
-          <li>
-            Professor led instruction: ~1-1.5hrs (either scheduled class or a
-            weekly recorded office hour if online)
-          </li>
+          <li>Reading assignments: ~2hrs</li>
+          <li>Team & individual activities: ~4-6hrs</li>
+          <li>Trello cards: ~3hrs</li>
+          <li>Professor led instruction: ~1hr (recorded weekly office hour)</li>
         </ol>
 
         <h2>Outcomes</h2>
@@ -234,22 +235,22 @@
         <ol>
           <li>
             Becoming more efficient at applying your innate curiosity and
-            creativity,
+            creativity.
           </li>
-          <li>becoming more dexterous at exploring your environment,</li>
+          <li>Becoming more dexterous at exploring your environment.</li>
           <li>
-            becoming a person who enjoys helping and learning from others,
-          </li>
-          <li>
-            using a divide and conquer approach to design solutions for
-            programming problems,
+            Becoming a person who enjoys helping and learning from others.
           </li>
           <li>
-            finding and trouble shooting bugs you and others will have in the
-            code you write, and
+            Using a divide and conquer approach to design solutions for
+            programming problems.
           </li>
           <li>
-            developing and debugging HTML, CSS, and JavaScript programs that use
+            Finding and troubleshooting bugs you and others will have in the
+            code you write.
+          </li>
+          <li>
+            Developing and debugging HTML, CSS, and JavaScript programs that use
             medium complexity web technologies.
           </li>
         </ol>
@@ -263,11 +264,11 @@
           >. The activities and assessments for this course are designed to give
           you opportunities to achieve these outcomes and evaluate you against
           them. If you desire a different set of evaluations and assignments,
-          you may propose them to the instructor (during the first or second
-          week of the semester) but your proposal must cover ALL of the course's
-          outcomes in significant ways and to a significant depth. Do not
-          propose a "check list" of do-once-and-forget activities. These will
-          not be approved.
+          you may propose them to the instructor (during the first week of the
+          semester), but your proposal must cover ALL of the course's outcomes
+          in significant ways and to a significant depth. Do not propose a
+          "check list" of do-once-and-forget activities. These will not be
+          approved.
         </p>
         <h2>Learning Model Architecture</h2>
         <h3>Prepare:</h3>
@@ -316,11 +317,10 @@
           this evaluation will not be recorded or become part of your grade.
         </p>
         <p>
-          <strong>At midterm and again at the end of the semester</strong> I
-          will ask you to turn in your ranking of yourself on the course
-          outcomes, with a portfolio of your work to back yourself up. I
-          recommend building this as you go. Your final grade will be based off
-          of these two artifacts.
+          <strong>At the end of the semester</strong> I will ask you to turn in
+          your ranking of yourself on the course outcomes, with a portfolio of
+          your work to back yourself up. I recommend building this as you go.
+          Your final grade will be based off of these two artifacts.
         </p>
 
         <h3>From the University Catalog:</h3>
@@ -415,9 +415,33 @@
             >
           </li>
           <li>
-            <a href="http://www.byui.edu/disability-services/syllabus-statement"
-              >Students with Disabilities</a
-            >
+            Students with Disabilities
+            <p>
+              BYU-Idaho is committed to providing a working and learning
+              atmosphere that reasonably accommodates qualified persons with
+              disabilities. Reasonable academic accommodations are reviewed for
+              all students who have qualified documented disabilities. Services
+              are coordinated with the student and instructor by BYU-Idaho
+              Disability Services. If you need assistance or feel you have been
+              unlawfully discriminated against on the basis of disability, you
+              may seek resolution through established policy and procedures.
+            </p>
+            <p>
+              If you have any disability that may impair your ability to
+              complete this course successfully, please contact Disability
+              Services as soon as possible, preferably before the beginning of
+              the semester, in order to ensure you receive appropriate
+              accommodations.
+            </p>
+
+            <ul>
+              <li>Disability Services Contact Information:</li>
+
+              <li>Website: Disability Services (Links to an external site.)</li>
+              <li>Phone (US only): (208) 496-9210</li>
+              <li>Email: disabilityservices@byui.edu</li>
+              <li>Fax: (208) 496-5210</li>
+            </ul>
           </li>
         </ul>
       </main>
