--- a/teacher/introduction.html
+++ b/teacher/introduction.html
@@ -19,9 +19,9 @@
       <main>
         <h1>Instructor Preparation</h1>
         <hr />
-        <h2>Course outline</h2>
+        <h2>Course Outline</h2>
         <p>
-          The course attempts to simulate working on a real project in a real
+          This course attempts to simulate working on a real project in a real
           frontend team. The first 9 weeks will be spent adding features and
           fixing bugs on a project called SleepOutside, a simple outdoor gear
           retail site.
@@ -50,7 +50,7 @@
           Students should attempt the cards individually, but should feel
           welcome to reach out to their teammates for help as needed.
         </p>
-        <p>So a typical week should have the following:</p>
+        <p>A typical week should have the following:</p>
         <ol>
           <li>Reading assignment: 1-2hrs</li>
           <li>
@@ -63,11 +63,11 @@
           </li>
         </ol>
 
-        <h3>Final project</h3>
+        <h3>Final Project</h3>
         <p>
           Part two is weeks 10-14 and will be spent building a new application
-          that the students have planned earlier in the course. There will still
-          be readings, but no more team activities.
+          that the teams have planned earlier in the course. There will still be
+          readings, but no more team activities.
         </p>
         <p>
           You may choose to coordinate with a CSE 341 instructor to have the
@@ -76,7 +76,7 @@
           backend.
         </p>
 
-        <h2>Instructor Time expectations</h2>
+        <h2>Instructor Time Expectations</h2>
         <p>
           The course is designed to minimize the amount of time you spend
           grading to allow for more time teaching and giving individualized
@@ -106,18 +106,18 @@
           those that can't make it. Use this time to answer any questions you
           find in the notes or that the students attending bring, and then work
           on a coding example illustrating skills from the readings. Each week
-          in the instructor notes I'll give an example project...use mine or
-          feel free to come up with your own.
+          in the Teaching Notes I'll give an example project...use mine or feel
+          free to come up with your own.
         </p>
         <p>
           You may also consider preparing a short video introduction for each
           week to help the students plan their time.
         </p>
-        <h2>Final grades</h2>
+        <h2>Final Grades</h2>
         <p>
           The grading for the course is a bit different. 30% of the grade will
           be made up of the weekly notes and team actities. The other 70% will
-          be based off of a self evaluation that the student performs. They will
+          be based off of a self-evaluation that the student performs. They will
           assess themselves on how well they have achieved the outcomes of the
           course, prepare a short video with their justifications, and then
           provide a portfolio of work to back up their claims. You should review
