--- a/ponder/team08.html
+++ b/ponder/team08.html
@@ -17,7 +17,7 @@
         </div>
       </header>
       <main>
-        <h1>Ponder: Team 8 Activity</h1>
+        <h1>Ponder: Team Activity 8</h1>
         <hr />
         <h2>Overview</h2>
         <p>
