--- a/prepare/week03.html
+++ b/prepare/week03.html
@@ -21,25 +21,25 @@
         <hr />
 
         <p>
-          This week most of the assigned readings will be from the
+          This lesson most of the assigned readings will be from the
           <a
             href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read"
             target="_blank"
             rel="noreferrer"
-            >Javascript: Novice to Ninja</a
+            >JavaScript: Novice to Ninja</a
           >
-          (Sitepoint)
+          (SitePoint)
           <!-- <a href="http://eloquentjavascript.net/index.html" target="_blank" rel="noreferrer"
             >Eloquent JavaScript (EJS)</a
           > -->
-          book. Remember though that if you are having trouble understanding a
+          book. Remember: if you are having trouble understanding a
           concept the way that this book presents it...go find another source!
         </p>
 
         <h2>Reading</h2>
         <ol>
           <li>
-            Read all of
+            Read 
             <a
               href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/9"
               target="_blank"
@@ -48,13 +48,19 @@
             >
           </li>
           <li>
-            Read all of
+            Read 
             <a
               href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element/template"
               target="_blank"
               rel="noopener"
-              >MDN article on template</a
+              >MDN The Content Template Element</a
             >
+          </li>
+        </ol>
+		<h2>Submission</h2>
+        <ol>
+          <li>
+            Submit your notes from the readings, including any questions you have about the material.
           </li>
         </ol>
       </main>
