--- a/prepare/week05.html
+++ b/prepare/week05.html
@@ -21,14 +21,14 @@
         <hr />
 
         <p>
-          This week the assigned readings will be from the
+          This lesson the assigned readings will be from the
           <a
             href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read"
             target="_blank"
             rel="noreferrer"
-            >Javascript: Novice to Ninja</a
+            >JavaScript: Novice to Ninja</a
           >
-          (Sitepoint) book. Remember though that if you are having trouble
+          (SitePoint) book. Remember: if you are having trouble
           understanding a concept the way that this book presents it...go find
           another source!
         </p>
@@ -36,15 +36,21 @@
         <h2>Reading</h2>
         <ol>
           <li>
-            Read all of
+            Read 
             <a
               href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/13"
               target="_blank"
               rel="noreferrer"
               >Ch13: AJAX</a
-            >.
+            >
           </li>
           
+          </li>
+        </ol>
+		<h2>Submission</h2>
+     <ol>
+          <li>
+            Submit your notes from the readings, including any questions you have about the material.
           </li>
         </ol>
       </main>
