--- a/prepare/week06.html
+++ b/prepare/week06.html
@@ -21,14 +21,14 @@
         <hr />
 
         <p>
-          This week the assigned readings will be from the
+          This lesson the assigned readings will be from the
           <a
             href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read"
             target="_blank"
             rel="noreferrer"
-            >Javascript: Novice to Ninja</a
+            >JavaScript: Novice to Ninja</a
           >
-          (Sitepoint) book. Remember though that if you are having trouble
+          (SitePoint) book. Remember: if you are having trouble
           understanding a concept the way that this book presents it...go find
           another source!
         </p>
@@ -36,13 +36,13 @@
         <h2>Reading</h2>
         <ol>
           <li>
-            Read all of
+            Read 
             <a
               href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/8"
               target="_blank"
               rel="noreferrer"
               >Ch8: Forms</a
-            >.
+            >
           </li>
           <li>
             Watch
@@ -50,18 +50,24 @@
               href="https://www.youtube.com/watch?v=GWJhE7Licjs"
               target="_blank"
               rel="noreferrer"
-              >Using FormData effectively (13min)</a
-            >.
+              >Using FormData Objects Effectively</a
+            > (13min)
           </li>
 
           <li>
-            Read all of
+            Read 
             <a
               href="https://developer.mozilla.org/en-US/docs/Learn/Forms/Form_validation"
               target="_blank"
               rel="noreferrer"
-              >MDN: Client side form validation</a
-            >.
+              >MDN: Client-Side Form Validation</a
+            >
+          </li>
+        </ol>
+		<h2>Submission</h2>
+     <ol>
+          <li>
+            Submit your notes from the readings, including any questions you have about the material.
           </li>
         </ol>
       </main>
