--- a/prepare/week07.html
+++ b/prepare/week07.html
@@ -21,12 +21,12 @@
         <hr />
 
         <p>
-          This week the assigned readings will be from the
+          This lesson the assigned readings will be from the
           <a
             href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read"
             target="_blank"
             rel="noreferrer"
-            >Javascript: Novice to Ninja</a
+            >JavaScript: Novice to Ninja</a
           >
           and
           <a
@@ -35,7 +35,7 @@
             rel="noreferrer"
             >HTML5 and CSS3 for the Real world</a
           >
-          (Sitepoint) books. Remember though that if you are having trouble
+          (SitePoint) books. Remember: if you are having trouble
           understanding a concept the way that this book presents it...go find
           another source!
         </p>
@@ -43,22 +43,28 @@
         <h2>Reading</h2>
         <ol>
           <li>
-            Read all of
+            Read 
             <a
               href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read/11"
               target="_blank"
               rel="noreferrer"
               >Ch11: Further Functions</a
-            >.
+            >
           </li>
           <li>
-            Read all of
+            Read 
             <a
               href="https://www.sitepoint.com/premium/books/html5-css3-for-the-real-world-2nd-edition/read/8"
               target="_blank"
               rel="noreferrer"
               >Ch8: Transforms and Transitions</a
             >
+          </li>
+        </ol>
+		<h2>Submission</h2>
+        <ol>
+          <li>
+            Submit your notes from the readings, including any questions you have about the material.
           </li>
         </ol>
       </main>
