--- a/prepare/week08.html
+++ b/prepare/week08.html
@@ -21,15 +21,15 @@
         <hr />
 
         <p>
-          This week the assigned readings will be from the
+          This lesson the assigned readings will be from the
           <a
             href="https://www.sitepoint.com/premium/books/javascript-novice-to-ninja-2nd-edition/read"
             target="_blank"
             rel="noreferrer"
-            >Javascript: Novice to Ninja</a
+            >JavaScript: Novice to Ninja</a
           >
 
-          (Sitepoint) books. Remember though that if you are having trouble
+          (SitePoint) book. Remember: if you are having trouble
           understanding a concept the way that this book presents it...go find
           another source!
         </p>
@@ -37,23 +37,28 @@
         <h2>Reading</h2>
         <ol>
           <li>
-            Read all of
+            Read 
             <a
               href="https://auth0.com/learn/json-web-tokens/?_ga=2.184084847.834837117.1611866055-1405126930.1611866055"
               target="_blank"
               rel="noreferrer"
-              >Getting Started with Json Web Tokens (JWT)</a
-            >.
+              >Getting Started with JSON Web Tokens (JWT)</a
+            >
           </li>
-          <li>
-            Watch
+          <li>Watch
             <a
               href="https://www.sitepoint.com/premium/tech-talks/dotjs-2019/develop-debug-learn"
               target="_blank"
               rel="noreferrer"
               >Develop, Debug, Learn?</a
             >
-            (Sitepoint 19min)
+            (SitePoint, 19min)
+          </li>
+        </ol>
+		<h2>Submission</h2>
+        <ol>
+          <li>
+            Submit your notes from the readings, including any questions you have about the material.
           </li>
         </ol>
       </main>
